# Tostitos

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  TODO.txt  TODOs.md  allocators_8h_source.html  annotated.html  annotated.js  appveyor.yml  ast_8h_source.html  astprinter_8h_source.html  astreader_8h_source.html  astvisitor_8h_source.html  basicblock_8h_source.html  cfgprinter_8h_source.html  cfgvisitor_8h_source.html  class_error.html  class_machine_engine_1_1_disk_space_1_1_disk-members.html  class_machine_engine_1_1_disk_space_1_1_disk.html  class_machine_engine_1_1_disk_space_1_1_disk.js  class_machine_engine_1_1_machine-members.html  class_machine_engine_1_1_machine.html  class_machine_engine_1_1_machine.js  class_machine_engine_1_1_memory_space_1_1_memory-members.html  class_machine_engine_1_1_memory_space_1_1_memory.html  class_machine_engine_1_1_memory_space_1_1_memory.js  class_machine_engine_1_1_processor_space_1_1_c_p_u-members.html  class_machine_engine_1_1_processor_space_1_1_c_p_u.html  class_machine_engine_1_1_processor_space_1_1_c_p_u.js  class_machine_engine_1_1_processor_space_1_1_instruction-members.html  class_machine_engine_1_1_processor_space_1_1_instruction.html  class_machine_engine_1_1_processor_space_1_1_instruction.js  class_machine_engine_1_1_processor_space_1_1_interpreter-members.html  class_machine_engine_1_1_processor_space_1_1_interpreter.html  class_machine_engine_1_1_processor_space_1_1_interpreter.js  class_system-members.html  class_system.html  (+274 more)
TosLang/: CMakeLists.txt  ast.h  astprinter.h  astvisitor.h  compiler.cpp  compiler.h  declarations.h  driver.cpp  errorlogger.cpp  errorlogger.h  expressions.h  instructionselector.cpp  instructionselector.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  ruletable.cpp  ruletable.h  statements.h  symbols.h  symboltable.cpp  symboltable.h  toslangdriver.cpp  toslangdriver.h  typechecker.cpp  typechecker.h
TosLang/AST/: ast.h  declarations.h  expressions.h  statements.h
TosLang/CFG/: basicblock.cpp  basicblock.h  controlflowgraph.cpp  controlflowgraph.h  module.cpp  module.h  virtualinstruction.cpp  virtualinstruction.h  virtualoperand.cpp  virtualoperand.h
TosLang/CodeGen/: activationrecord.h  activationrecorder.cpp  activationrecorder.h  codegenerator.cpp  codegenerator.h  controlflowgraph.cpp  controlflowgraph.h  instructionselector.cpp  instructionselector.h  machineinstruction.cpp  machineinstruction.h  machineoperand.cpp  machineoperand.h  registerallocator.cpp  registerallocator.h  ruletable.h
TosLang/Common/: astvisitor.h  cfgvisitor.h  opcodes.h  type.cpp  type.h
TosLang/Execution/: callstack.cpp  callstack.h  commandlineutil.h  compiler.cpp  compiler.h  executor.cpp  executor.h  interpretedvalue.h  interpreter.cpp  interpreter.h
TosLang/Interpreter/: callstack.cpp  callstack.h  interpretedvalue.h  interpreter.cpp  interpreter.h
TosLang/LLVMBackend/: llvmgenerator.cpp  llvmgenerator.h
TosLang/Parse/: lexer.cpp  lexer.h  opcodes.h  parser.cpp  parser.h  symboltable.h
TosLang/SSA/: cfgbuilder.cpp  cfgbuilder.h  ssafunction.cpp  ssafunction.h  ssainstruction.cpp  ssainstruction.h  ssavalue.cpp  ssavalue.h
TosLang/Sema/: overloadsolver.cpp  overloadsolver.h  scopechecker.cpp  scopechecker.h  symbol.h  symbolcollector.cpp  symbolcollector.h  symboltable.cpp  symboltable.h  typechecker.cpp  typechecker.h  typeinfer.cpp  typeinfer.h  utils.h
TosLang/Utils/: astprinter.h  astreader.cpp  astreader.h  astvisitor.h  cfgprinter.h  errorlogger.cpp  errorlogger.h  sourceloc.cpp  sourceloc.h
Tostitos/: CMakeLists.txt  main.cpp  system.h
Tostitos/chip16/: constants.h  cpu.cpp  cpu.h  instruction.cpp  instruction.h  interpreter.cpp  interpreter.h  utils.h
Tostitos/common/: CMakeLists.txt  typeDescriptions.h
Tostitos/communicationWithHost/: CMakeLists.txt  hardDriveHelper.cpp  hardDriveHelper.h
Tostitos/dataStructures/: CMakeLists.txt  allocators.cpp  allocators.h  dataStructures.h
Tostitos/fileSystem/: CMakeLists.txt  fileHeader.cpp  fileHeader.h  fileSystem.h
Tostitos/kernel/: CMakeLists.txt  kernel.cpp  kernel.h  scheduler.cpp  scheduler.h
Tostitos/machine/: CMakeLists.txt  constants.h  cpu.cpp  cpu.h  hardDrive.cpp  hardDrive.h  instruction.cpp  instruction.h  internalHelperFunctions.cpp  internalHelperFunctions.h  interpreter.cpp  interpreter.h  machine.cpp  machine.h  memory.h  threadInfo.h  utils.h
Tostitos/memory/: CMakeLists.txt  userMemory.cpp  userMemory.h
Tostitos/scripts/: CMakeLists.txt  arithmetic.tos  master.tos  memory.tos  worker.tos
Tostitos/threading/: CMakeLists.txt  callstack.cpp  callstack.h  executor.cpp  executor.h  interpretedvalue.h  thread.cpp  thread.h  threadutil.cpp  threadutil.h
Tostitos/threads/: CMakeLists.txt  kernel.cpp  kernel.h  scheduler.cpp  scheduler.h  thread.cpp  thread.h
tests/: CMakeLists.txt  ast_printer_tests.cpp  console_error_fixture.h  frontend_error_fixture.h  instruction_selector_tests.cpp  instruction_tests.cpp  interpreter_fixture.h  interpreter_tests.cpp  interpreter_tests.h  lexer_tests.cpp  main.cpp  parser_error_tests.cpp  parser_tests.cpp  testrunner.py  typechecker_tests.cpp  utils_tests.cpp
tests/inputs/: badvardecl.tos  typeerror.tos  var.tos  varinit.tos
tests/interpreter/: testrunner.py
tests/lang/: ast_printer_tests.cpp  frontend_error_fixture.h  instruction_selector_tests.cpp  lexer_error_tests.cpp  lexer_tests.cpp  parser_array_tests.cpp  parser_call_tests.cpp  parser_error_tests.cpp  parser_fn_tests.cpp  parser_if_tests.cpp  parser_io_tests.cpp  parser_tests.cpp  parser_var_tests.cpp  parser_while_tests.cpp  register_allocator_tests.cpp  scope_check_call_tests.cpp  scope_check_var_tests.cpp  scope_checker_call_tests.cpp  scope_checker_var_tests.cpp  symbol_collector_tests.cpp  testutils.h  toslang_codegen_fixture.h  toslang_fixture.h  toslang_parser_fixture.h  toslang_sema_fixture.h  type_checker_array_tests.cpp  type_checker_call_tests.cpp  type_checker_if_tests.cpp  type_checker_io_tests.cpp  type_checker_return_tests.cpp  type_checker_tests.cpp  (+2 more)
(+278 files in other folders)
